--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
 
 <body class="bg-dark">
   <main>
+
+  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+    <div class="offcanvas-header pb-0">
+      <h4 class="offcanvas-title" id="offcanvasTopLabel">Offcanvas top</h4>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+     ...
+
+    </div>
+    <div class="d-flex justify-content-end align-items-end">
+    <div class="dropdown" id="btnMore">
+     <a class="btn btn-info dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+
+     <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#" id="year">Year:</a></li>
+      <li><a class="dropdown-item" href="#" id="runtime">Runtime:</a></li>
+      <li><a class="dropdown-item" href="#" id="budget">Budget:</a></li>
+      <li><a class="dropdown-item" href="#" id="revenue">Revenue:</a></li>
+     </ul>
+    </div>
+    </div>
+  </div>
+
     <div class="text-center container">
       <div class="row py-lg-3">
         <div class="col-lg-6 col-md-8 mx-auto">
